# tracelift

./: .gitignore  Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: RESULTS.md  _measure.py  generate.py  run.py
bindings/: Cargo.toml
bindings/src/: lib.rs
core/: Cargo.toml
core/src/: jsonl.rs  lib.rs  map.rs  model.rs  otlp.rs
core/tests/: parse.rs
python/tracelift/: __init__.py  _frame.py  cli.py
tests/: test_cli.py  test_load.py  test_queries.py
tests/fixtures/: sample.jsonl  sample_otlp.json
