[package]
name = "tracelift-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for tracelift"

[lib]
name = "_tracelift"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "59.0.0", features = ["pyarrow"] }
pyo3 = { version = "0.28", features = ["abi3-py310"] }
tracelift-core = { path = "../core" }
